@@ -1,4 +1,3 @@
-
 Moose requires perl 5.8.3
 
 Perl::PrereqScanner 1.023 requires PPI 1.215
@@ -7,4 +6,3 @@ Perl::PrereqScanner 1.023 requires PPI 1.215
     - Strawberry Perl 5.10.0 and 5.10.1 shipps with ExtUtils::MakeMaker 6.56
       - ExtUtils::MakeMaker 7.10 does not build on Strawberry
       - ExtUtils::MakeMaker 7.34 does not build on Strawberry
-
