@@ -33,7 +33,7 @@ my %WriteMakefileArgs = (
     "Test::Fatal" => 0,
     "Test::MockModule" => 0,
     "Test::More" => "0.88",
-    "Test::TempDir::Tiny" => "0.017",
+    "Test::TempDir::Tiny" => 0,
     "lib" => 0
   },
   "VERSION" => "0.002",
@@ -55,7 +55,7 @@ my %FallbackPrereqs = (
   "Test::Fatal" => 0,
   "Test::MockModule" => 0,
   "Test::More" => "0.88",
-  "Test::TempDir::Tiny" => "0.017",
+  "Test::TempDir::Tiny" => 0,
   "lib" => 0,
   "strict" => 0,
   "version" => "0.77",
