@@ -10,5 +10,5 @@ lib = dzil-inc/lib
 
 [@Author::SKIRMESS]
 :version = 1.000
-Author::SKIRMESS::ProjectSkeleton.appveyor_earliest_perl = 5.12
-Author::SKIRMESS::ProjectSkeleton.ci_earliest_perl       = 5.8.3
+appveyor_earliest_perl = 5.12
+ci_earliest_perl = 5.8.3
