@@ -2,6 +2,8 @@ Revision history for Test-MinimumPrereqs
 
 {{$NEXT}}
 
+  - Removed minimal dependency on Test::TempDir::Tiny 0.017
+
 0.002  2018-06-14 22:08:38 UTC
 
   - Updated documentation
